マイクロモーダルの導入

--- a/package.json
+++ b/package.json
@@ -19,6 +19,7 @@
     "@angular/platform-browser": "~10.0.6",
     "@angular/platform-browser-dynamic": "~10.0.6",
     "@angular/router": "~10.0.6",
+    "micromodal": "^0.4.6",
     "rxjs": "~6.5.5",
     "swiper": "^6.4.5",
     "tslib": "^2.0.0",
